# bluesky-translate-bot

./: Cargo.toml
src/: config.rs  main.rs
src/bsky_client/: client.rs  types.rs
