[package]
name = "bluesky-translate-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cid = "0.10.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_bytes = "0.11.10"
serde_cbor_2 = "0.12.0-dev"
serde_json = "1.0.99"
strum = { version = "0.25.0", features = ["derive"] }
tungstenite = { version = "0.19.0", features = ["native-tls"] }
